// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/MonthPicker default 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih nds-month-picker"
      data-testid="month-picker"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <label
            class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
            color="black"
            style="display:block"
          >
            <div
              class="Box-xda4ls-0 biCpIl"
              data-testid="field-label"
            >
              <span
                class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
              >
                Month
              </span>
            </div>
            <div
              class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
            >
              <div
                class="Box-xda4ls-0 erhvLv"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-label="select a date"
                  class="InputField__StyledInput-a97ghf-0 eSDvmh"
                  placeholder="Mon YYYY"
                  value="Jan 2019"
                />
                <svg
                  aria-hidden="true"
                  class="Icon-sc-150w9kl-0 InputField__StyledInputIcon-a97ghf-1 fAXONE nds-icon--calendarToday"
                  fill="currentColor"
                  focusable="false"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/MonthPicker with a min and max date 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih nds-month-picker"
      data-testid="month-picker"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <label
            class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
            color="black"
            style="display:block"
          >
            <div
              class="Box-xda4ls-0 biCpIl"
              data-testid="field-label"
            >
              <span
                class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
              >
                Month and Year
              </span>
            </div>
            <div
              class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
            >
              <div
                class="Box-xda4ls-0 erhvLv"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-label="select a date"
                  class="InputField__StyledInput-a97ghf-0 eSDvmh"
                  placeholder="Mon YYYY"
                  value="Jul 2019"
                />
                <svg
                  aria-hidden="true"
                  class="Icon-sc-150w9kl-0 InputField__StyledInputIcon-a97ghf-1 fAXONE nds-icon--calendarToday"
                  fill="currentColor"
                  focusable="false"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/MonthPicker with custom placeholder 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih nds-month-picker"
      data-testid="month-picker"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <label
            class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
            color="black"
            style="display:block"
          >
            <div
              class="Box-xda4ls-0 biCpIl"
              data-testid="field-label"
            >
              <span
                class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
              >
                Month and Year
              </span>
            </div>
            <div
              class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
            >
              <div
                class="Box-xda4ls-0 erhvLv"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-label="select a date"
                  class="InputField__StyledInput-a97ghf-0 eSDvmh"
                  placeholder="Month, year"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="Icon-sc-150w9kl-0 InputField__StyledInputIcon-a97ghf-1 fAXONE nds-icon--calendarToday"
                  fill="currentColor"
                  focusable="false"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/MonthPicker with error state 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih nds-month-picker"
      data-testid="month-picker"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <label
            class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
            color="black"
            style="display:block"
          >
            <div
              class="Box-xda4ls-0 biCpIl"
              data-testid="field-label"
            >
              <span
                class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
              >
                Month and Year
              </span>
            </div>
            <div
              class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
            >
              <div
                class="Box-xda4ls-0 erhvLv"
                display="flex"
              >
                <input
                  aria-invalid="true"
                  aria-label="select a date"
                  class="InputField__StyledInput-a97ghf-0 gAGDPa"
                  placeholder="yyyy MMM"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="Icon-sc-150w9kl-0 InputField__StyledInputIcon-a97ghf-1 fAXONE nds-icon--calendarToday"
                  fill="currentColor"
                  focusable="false"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
      <div
        class="Box-xda4ls-0 Flex-sc-1whlq91-0 jHmnKr"
        color="red"
      >
        <svg
          aria-hidden="true"
          class="Icon-sc-150w9kl-0 iGbfeP nds-icon--error"
          fill="currentColor"
          focusable="false"
          height="24px"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-19uke1q-0 dFKyki"
        >
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            The date is invalid
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
